Fixed non-decimal input for item price, Fixed width of pages overflowing with white and grey colours.

--- a/src/ItemList/ItemsList.css
+++ b/src/ItemList/ItemsList.css
@@ -6,11 +6,12 @@
   /* border: 5px solid blue; */
   display: flex;
   flex-direction: column;
+  width: 100vh;
 }
 
 .item-list {
   /* border : 2px solid yellow; */
-  width: 100vh;
+  width: 100%;
   height: 100%;
   min-height: 100vh;
   padding: 0%;
@@ -53,10 +54,6 @@
 
 .quantity {
   width : 45px;
-}
-
-.input-price input {
-  appearance: textfield;
 }
 
 .tax-name-list {
