--- a/src/TaxList/Tax.css
+++ b/src/TaxList/Tax.css
@@ -4,15 +4,15 @@
   flex-direction: column;
   height: 100%;
   min-height: 100vh;
+  width: 100vh;
 }
 
 .tax-list {
-  width: 100vh;
+  width: 100%;
   height: 100%;
   min-height: 100vh;
   padding: 0%;
   padding-bottom: 5%;
-  /* border: 1px solid #ccc; */
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -40,4 +40,17 @@
 .tax-name-list {
   /* overflow: auto; */
   padding: 5px;
+}
+
+
+.tax-item {
+  border : 2px solid white;
+  border-radius : 10px;
+  padding-right : 10px;
+  padding-left : 10px;
+  width : 280px;
+  display : flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-bottom : 10px;
 }
